# time-split-app

./: .bumpversion.cfg  .codespellrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  app.py  app_extensions.py  entrypoint.sh  healthcheck.py  mypy.ini  noxfile.py  pyproject.toml  run-invocations.sh  tasks.py
.azure/: .env  datasets.toml  docker-compose.yml  nginx.conf  start.sh
.github/: dependabot.yml
.github/workflows/: docker.yml  release.yml  tests.yml
dev/: .env  common.env  docker-compose.yml  docker.sh  make-doc-section.py  python.sh  run-compose.sh  run-docker.sh  run-python.sh  update-dataset.py  update-datasets.py
src/time_fold_explorer/: __init__.py  _logging.py  _support.py  _views.py  config.py
src/time_fold_explorer/widgets/: __init__.py  types.py
src/time_fold_explorer/widgets/data/: __init__.py  _data.py  _datasets.py  _sample_data.py  load.py
src/time_fold_explorer/widgets/display/: __init__.py  _aggregate.py  _code.py  _overview.py  _performance.py  _plot_folds.py
src/time_fold_explorer/widgets/parameters/: __init__.py  _datetime.py  _duration.py  _expand_limits.py  _schedule.py  _schedule_filter.py  _span.py
src/time_split_app/: Dockerfile  __init__.py  _logging.py  _select_link_impl_from_entrypoint.py  _support.py  _views.py  app.py  cli.py  config.py  formatting.py  style.css  style.py
src/time_split_app/datasets/: __init__.py  _config.py  _datasets.py  _load.py  _read_fn.py
src/time_split_app/new/: Dockerfile  README.md  entrypoint.sh  extensions.env  my_extensions.py  start-dev.sh
src/time_split_app/new/datasets/: covid19.csv  datasets.toml
src/time_split_app/new/extensions/: __init__.py  my_dataset_loader.py  my_kwargs_type.py  my_plot_fn.py  my_select_fn.py
src/time_split_app/widgets/: __init__.py  ruff.toml  types.py
src/time_split_app/widgets/data/: __init__.py  _data.py  _data_loader_widget.py  _datasets.py  _loader_from_env_entrypoint.py  _sample_data.py  load.py  sample.csv
src/time_split_app/widgets/display/: _aggregate.py  _code.py  _overview.py  _performance.py  _plot_folds.py  _select_impl_from_entrypoint.py
src/time_split_app/widgets/parameters/: __init__.py  _expand_limits.py  _schedule.py  _schedule_filter.py  _select_impl_from_entrypoint.py  _span.py  _splitter_kwargs.py
src/time_split_app/widgets/time/: __init__.py  _datetime.py  _duration.py
tests/: __init__.py  test_app.py  test_cli.py  test_loader_widget.py  test_query_params.py
tests/datasets/: bad-index-type.toml  bad-path.toml  duplicate-label.toml  ok-explicit-index.toml  ok.toml  test_config.py  test_dataset.py
